# type_enum

./: Cargo.toml  README.md
src/: lib.rs  serialize.rs
